updated documentation and gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 # ~~~~~~ Custom entries curated by project team ~~~~~~
-## big data sets - exclude from repo sync
-datasets/*
-## data frame backups
+# dataframe backups
 *.pkl
 
 # ~~~~~~ AUTO-GENERATED ~~~~~~
